# CSE6242-Project

./: .gitignore  Makefile  README.md
.circleci/: config.yml  release
Forecast/: Prediction_modeling.ipynb  Step 3 ARIMA.ipynb  Step 4 Prediction.ipynb  final_output.csv  final_output_all_years.csv  gdp_mapped.csv  output_gdp0_pop0.csv  pop_mapped.csv  predicted_TRSW_v2.csv  predicted_cultivated_area_v2.csv  random_forest.sav  training_data_arima.csv  training_data_rate.csv
Forecast/.ipynb_checkpoints/: Countries-checkpoint.ipynb  Impute Data-checkpoint.ipynb  Prediction-checkpoint.ipynb
api/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
api/docs/: Makefile  make.bat
api/docs/source/: conf.py  index.rst
api/tests/: test_wsi_api.py
api/wsi_api/: __init__.py  factory.py
api/wsi_api/app/: __init__.py  endpoints.py  helpers.py  models.py
api/wsi_api/app/templates/: index.html
data/Forecast/: Forecast_cultivated_area.Rmd  README.md  Step 4 Prediction.ipynb  Step 4-1 Compare models for predicting TFW.ipynb  Step 5 Parameters.ipynb  WSI graphic.ipynb  countries_gdp.xlsx  final_output.csv  final_output_all_years.csv  output_gdp0_pop0.csv  population_growth.xlsx  training_countries.csv  training_data.csv
data/db/: project.db-journal  script.txt
data/final/: country.csv  wsi.csv  yearly_forecast.csv
data/raw/: africa.csv  americas.csv  asia.csv  (+2 more)
deploy/: ec2-bootstrap.sh
old_ui/: WorldMapClass.js  world_map_template.css  world_map_template.js
ui/: GraphicClass.js  README.md  TimelineClass.js  index.html  package.json
(+52 files in other folders)
