[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikhil Anand <mail@nikhil.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
flask-cors = "^3.0"
flask-sqlalchemy = "^2.4"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
