[tool.poetry]
name = "wsi_api"
version = "0.0.29"
description = "Upstream API for an app that shows Global Water Stress Index"
authors = [
    "Deepti Anand <danand8@gatech.edu>",
    "Hyelim Yang <hyang416@gatech.edu>",
    "Joseph Michael Tritchler <jtritchler3@gatech.edu>",
    "Nikhil Anand <nanand33@gatech.edu>",
    "Spencer Price <sprice31@gatech.edu>",
    "Yatish Kasaraneni <ykasaraneni3@gatech.edu>",
]
include = [
    "wsi_api/app/db/**/*",
    "wsi_api/app/ui/**/*",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
flask-cors = "^3.0"
gunicorn = "^19.9"
webargs = "^5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
